--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
 					<img src="img/thumb/elfmakerB.png" alt="elfmakerB" />
 					<span>elfmaker</span>
 				</li>
+				<li>
+					<a href="">
+						<img src="img/thumb/elfmaker (1)B.png" alt="elfmaker1" />
+						<span>elfmaker1</span>
+					</a>
+				</li>
+				<div class="clear"></div>
 			</ul>
 		</div>
 	</body>
