--- a/index.html
+++ b/index.html
@@ -13,13 +13,27 @@
 		<div class="container">
 			<ul class="gallery">
 				<li>
-					<img src="img/thumb/elfmakerB.png" alt="elfmakerB" />
-					<span>elfmaker</span>
+					<a href="">
+						<img src="img/thumb/elfmakerB.png" alt="elfmakerOG" />
+						<span>elfmaker</span>
+					</a>
 				</li>
 				<li>
 					<a href="">
 						<img src="img/thumb/elfmaker (1)B.png" alt="elfmaker1" />
 						<span>elfmaker1</span>
+					</a>
+				</li>
+				<li>
+					<a href="">
+						<img src="img/thumb/elfmaker (2)B.png" alt="elfmaker2" />
+						<span>elfmaker2</span>
+					</a>
+				</li>
+				<li>
+					<a href="">
+						<img src="img/thumb/elfmaker (3)B.png" alt="elfmaker3" />
+						<span>elfmaker3</span>
 					</a>
 				</li>
 				<div class="clear"></div>
