--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
 						<img src="img/thumb/elfmakerB.png" alt="elfmakerOG" />
 						<span>elfmaker</span>
 					</a>
+					<div class="overlay" id="gambar-1">
+						<a href="#" class="close">X Close</a>
+						<img src="img/full/elfmaker.png" alt="elfmakerOG-fullSize" />
+					</div>
 				</li>
 				<li>
 					<a href="">
