--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<div class="container">
 			<ul class="gallery">
 				<li>
-					<a href="">
+					<a href="#gambar-1">
 						<img src="img/thumb/elfmakerB.png" alt="elfmakerOG" />
 						<span>elfmaker</span>
 					</a>
@@ -23,22 +23,34 @@
 					</div>
 				</li>
 				<li>
-					<a href="">
+					<a href="#gambar-2">
 						<img src="img/thumb/elfmaker (1)B.png" alt="elfmaker1" />
 						<span>elfmaker1</span>
 					</a>
+					<div class="overlay" id="gambar-2">
+						<a href="#" class="close">X Close</a>
+						<img src="img/full/elfmaker (1).png" alt="elfmaker1-fullSize" />
+					</div>
 				</li>
 				<li>
-					<a href="">
+					<a href="#gambar-3">
 						<img src="img/thumb/elfmaker (2)B.png" alt="elfmaker2" />
 						<span>elfmaker2</span>
 					</a>
+					<div class="overlay" id="gambar-3">
+						<a href="#" class="close">X Close</a>
+						<img src="img/full/elfmaker (2).png" alt="elfmaker2-fullSize" />
+					</div>
 				</li>
 				<li>
-					<a href="">
+					<a href="#gambar-4">
 						<img src="img/thumb/elfmaker (3)B.png" alt="elfmaker3" />
 						<span>elfmaker3</span>
 					</a>
+					<div class="overlay" id="gambar-4">
+						<a href="#" class="close">X Close</a>
+						<img src="img/full/elfmaker (3).png" alt="elfmaker3-fullSize" />
+					</div>
 				</li>
 				<div class="clear"></div>
 			</ul>
