--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 					</a>
 					<div class="overlay" id="gambar-1">
 						<a href="#" class="close">X Close</a>
+						<a href="#gambar-4" class="prev">previous</a>
 						<img src="img/full/elfmaker.png" alt="elfmakerOG-fullSize" />
+						<a href="#gambar-2" class="next">next</a>
 					</div>
 				</li>
 				<li>
@@ -29,7 +31,9 @@
 					</a>
 					<div class="overlay" id="gambar-2">
 						<a href="#" class="close">X Close</a>
+						<a href="#gambar-1" class="prev">previous</a>
 						<img src="img/full/elfmaker (1).png" alt="elfmaker1-fullSize" />
+						<a href="#gambar-3" class="next">next</a>
 					</div>
 				</li>
 				<li>
@@ -39,7 +43,9 @@
 					</a>
 					<div class="overlay" id="gambar-3">
 						<a href="#" class="close">X Close</a>
+						<a href="#gambar-2" class="prev">previous</a>
 						<img src="img/full/elfmaker (2).png" alt="elfmaker2-fullSize" />
+						<a href="#gambar-4" class="next">next</a>
 					</div>
 				</li>
 				<li>
@@ -49,7 +55,9 @@
 					</a>
 					<div class="overlay" id="gambar-4">
 						<a href="#" class="close">X Close</a>
+						<a href="#gambar-3" class="prev">previous</a>
 						<img src="img/full/elfmaker (3).png" alt="elfmaker3-fullSize" />
+						<a href="#gambar-1" class="next">next</a>
 					</div>
 				</li>
 				<div class="clear"></div>
