--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<title>Gallery+Lightbox</title>
 		<link rel="stylesheet" href="css/reset.css" />
 		<link rel="stylesheet" href="css/style.css" />
+		<link rel="icon" href="img/elf.png" />
 	</head>
 	<body>
 		<h1>Christmas Elfmakers</h1>
@@ -63,5 +64,7 @@
 				<div class="clear"></div>
 			</ul>
 		</div>
+		<span class="attribute"><a href="https://www.flaticon.com/free-icons/christmas" title="christmas icons">Christmas icons created by Freepik - Flaticon</a></span>
+		<footer>Made by Revlien Nathalia</footer>
 	</body>
 </html>
